[package]
name = "alxr-client-uwp"
version = "1.10.0"
authors = ["korejan <64199710+korejan@users.noreply.github.com>"]
edition = "2021"
build = ".build/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "alxr-client-uwp"
path = "../src/main.rs" 

[dependencies]
alxr-common = { path = "../../alxr-common" }

[dependencies.windows-sys]
version = "0.36.1"
features = []

[build-dependencies]
toml = "0.5.8"

# Metadata driving the build system. Once created, you can freely fill in and change the
# required entries, and have the build system take it from there.

[package.metadata.appxmanifest]
# The following entries relate to the package identity. They are available through the
# [Microsoft Partner Center](https://partner.microsoft.com) dashboard, once you have
# registered a product name. Go to Products -> <product name> -> Product management ->
# Product Identity to find the respective information.

# (String, required) The package name: The value can be found under the key
# "Package/Identity/Name".
package-identity-name = "ALVR.alxr-client"

# (String, required) The package publisher: The value can be found under the key
# "Package/Identity/Publisher".
package-identity-publisher = "CN=ALVR, O=ALVR, C=US"

# (String, optional) The package version: A string of four period-delimited numeric
# values following the pattern "<Major>.<Minor>.<Build>.<Revision>". This is the public-
# facing version, that is displayed in the Microsoft Store. It is also used to name
# binary artifacts generated by the build system.
# When missing, this value is substituted with the "version" entry of the [package]
# table, with the <Revision> field defaulting to 0.
# package-identity-version = "0.0.0.0"


# The following entry controls whether to target Windows 10 Mobile.

# (String, optional) The phone product ID: A string representing the GUID of the Windows
# 10 Mobile product. It is required when targeting Windows 10 Mobile.
# When missing, no packages targeting Windows 10 Mobile are generated.
# package-phoneidentity-productid = "00000000-0000-0000-0000-000000000000"


# The next two entries designate public-facing properties of the application. Either one
# is displayed in the Microsoft Store.

# (String, optional) The package display name: This property must match the application
# name as registered in the Microsoft Partner Center. When missing, this value is
# substituted with the "name" entry of the [package] table.
# package-properties-displayname = "AppNameDefault"

# (String, required) The package publisher display name: This property must match the
# publisher display name under which you plan to publish an application in the Microsoft
# Store. Depending on your Microsoft Partner Center registration this information can be
# found under Account settings -> Organization profile -> Legal -> Contact info.
package-properties-publisherdisplayname = "ALVR"


# Public facing aspects of an application package.
# See [uap:VisualElements](https://docs.microsoft.com/en-us/uwp/schemas/appxpackage/uapmanifestschema/element-uap-visualelements)

# (String, required) A friendly name for the app that can be displayed to users.
package-applications-visualelements-displayname = "alxr-client"

# (String, required) The description of the app.
package-applications-visualelements-description = "An OpenXR based ALVR client for streaming PC-VR"
